# qtrecurit

./: README.md
examples/cli/: Cargo.toml  cli.rs  main.rs  mod.rs  status.rs
examples/cli/connect/: mod.rs  notice.rs
examples/cli/human/: config.rs  mod.rs  position.rs  report.rs
examples/connect/: recuritment.md
src/cli/: CHANGELOG.md  Cargo.toml
src/cli/src/: cli.rs  main.rs  overview.rs  provider.rs  report.rs  status.rs
src/cli/src/connect/: email.rs  mod.rs
src/cli/src/connect/email/: lark.rs  mod.rs
src/cli/src/human/: config.rs  department.rs  employee.rs  mod.rs  report.rs  status.rs
src/cli/src/meta/: index.rs  mod.rs
src/cli/tests/: test_cli.rs
src/site/: CHANGELOG.md  package-lock.json  package.json
src/site/src/: App.css  App.tsx  index.css
