[package]
name = "qtadmin-cli"
version = "0.0.12"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
walkdir = "2"
anyhow = "1"
thiserror = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
serde_yaml = "0.9"
quanttide-agent = "0.1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "qtadmin"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
